# backend

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: settings.py  urls.py
user/: admin.py  models.py  serializers.py
user/migrations/: 0001_initial.py
